# Plant-Care-Assistant-App

./: .gitignore  CONTRIBUTING.md  README.md  ruff.toml
.github/workflows/: ci-ai.yml
ai/: README.md  pyproject.toml
ai/data/sample/: sample_species_id_2_name.json
ai/docker/: cpu.Dockerfile  gpu.Dockerfile
ai/notebooks/: preprocessing.ipynb
ai/scripts/: run_integration_tests.sh  run_test_coverage.sh  run_unit_tests.sh
ai/src/data/: __init__.py  dataloader.py  dataset.py  preprocessing.py
ai/src/models/: __init__.py
ai/src/plant_care_ai/: __init__.py
ai/tests/: __init__.py
ai/tests/integration/: __init__.py  test_placeholder.py
ai/tests/unit/: __init__.py  test_placeholder.py
data/: README.md
data/migrations/: V1__init_schema.sql
infra/: docker-compose.yml
scripts/: run_ai_integration_tests.sh  run_ai_unit_tests.sh
